--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ before_script:
   - ./cc-test-reporter before-build
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_success:
+- codecov
